# p1

./: .gitignore  agents.py  package-lock.json  package.json  pnpm-lock.yaml  top_traders.json  twitter_predictions.db  twitter_tweets.db
.devcontainer/: devcontainer.json
.roo/: mcp.json
old/2025-jul-8/: tools.md
old/mcp-superassistant-proxy-test/: l3000hub.json  mcp.sh
old/s2-autox/: plan.md  read.py  test.py  test_playwright.py  twitter_scraper.py
old/s3-trade/: requirements.txt
old/s4-trade/: requirements.txt
old/s5-coder/: ai_agent.py  dspytest_openai2.py
old/s8-matching-game/: index.html
s1-cua/: agent1_memory.db  agent2_memory.db  main.py  plan.md  requirements.txt
s1-fw/t1/: plan.md
s1-fw/t1/mylib/: Cargo.toml  btr.sh  buildout.txt  testout.txt
s1-fw/t1/mylib/.cargo/: config.toml
s1-fw/t1/mylib/src/: a.sqlite3-query  lib.rs  main.rs
s1-fw/t1/mylib/tests/: integration.rs
s2-autox/: plan.md  read-2.py  read.py  test.py  test2.py  test_playwright.py  twitter_scraper.py
s3-trade/: cryptofetch.py  lightpanda_gmgn.js  lightpanda_test.js  main.py  notte_test.py  solana_best.md  todo.md
s3-trade/nodriver/: gmgn.py  test.py
s3-web3-w/t3/my_launchpad/programs/my_launchpad/: Cargo.toml
s3-web3-w/t3/my_launchpad/programs/my_launchpad/src/: dex.rs  launchpad.rs
s4-trade/: main.py  requirements.txt
s5-coder/: ai_agent.py  requirements.txt  research.md
s6-ch-backtest/2025-jun-27/cognee-test/: pyproject.toml
s6-ch-backtest/2025-jun-27/cognee-test/agent/: main.py
s7-audir/: auditors.md  exploits.md  plan.md
test-results/: .last-run.json
(+435 files in other folders)
