[package]
name = "mylib"
version = "0.1.0"
edition = "2024"

[dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1.40", features = ["full"] }
anyhow = "1.0"