[package]
name = "mylib"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7.9"
rusqlite = { version = "0.31.0", features = ["bundled"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"

[dev-dependencies]
hyper = { version = "1.0", features = ["client", "http1"] }
tower = { version = "0.4", features = ["util"] }