[tool.poetry]
name = "cognee-agent"
version = "0.1.0"
description = "AI agent using Cognee with docs knowledge"
authors = ["Your Name <your@email.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
cognee = "*"
requests = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
