[package]
name = "my_launchpad"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "my_launchpad"

[features]
no-entrypoint = []
no-idl = []
no-cpi = []
default = []

[dependencies]
anchor-lang = { version = "0.30.1", features = ["derive"] }
anchor-spl = "0.30.1"
solana-program = "1.18.15"
